# inferencelens

./: .env.example  Dockerfile  README.md  config.py  demo.py  requirements.txt
api/: main.py
data/: __init__.py  generator.py
inferencelens-1.0.0/: README.md  pyproject.toml
inferencelens-1.0.0/src/inferencelens/: config.py
inferencelens-1.0.0/src/inferencelens.egg-info/: PKG-INFO  requires.txt  top_level.txt
inferencelens-1.0.0/src/inferencelens/pipeline/: __init__.py  audit.py  evaluator.py  pareto.py  report.py  router.py
inferencelens-1.0.0/tests/: test_evaluator.py  test_generator.py  test_pipeline_integration.py
pipeline/: audit.py  cost_tracker.py  evaluator.py  pareto.py  profiler.py  report.py  router.py
src/inferencelens/: __init__.py
src/inferencelens.egg-info/: SOURCES.txt
src/inferencelens/data/: __init__.py  generator.py
src/inferencelens/pipeline/: cost_tracker.py  profiler.py
tests/: test_pareto.py  test_router.py
